# minerva

./: .dockerignore  .env.example  .env.production.example  .gitignore  .ruff.toml  Claude.md  DEPLOYMENT.md  Dockerfile  Minerva_API.postman_collection.json  README.md  alembic.ini  fly.toml  mypy.ini  pyproject.toml  pytest.ini  reprocess_with_filtering.py  test_db_manual.py  test_kindle_screenshot.py  test_pipeline_integration.py  test_real_api.py  test_ui_filtering.py  test_with_low_detail.py  validate_ocr.py
.bmad-core/: install-manifest.yaml
alembic/: env.py
alembic/versions/: 540a518e2b30_add_website_scraping_support.py  c8d7004725a4_initial_schema.py
docs/: IMPLEMENTATION-NEXT-STEPS.md  SECURITY.md  WEBSITE-SCRAPING-IMPLEMENTATION.md  architecture.md  brainstorming-session-results.md  brief.md  prd.md  sprint-change-proposal-tesseract-ocr.md
docs/architecture/: appendix-key-decisions-summary.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  next-steps.md  rest-api-specification.md  security.md  source-tree.md  tech-stack.md  (+3 more)
minerva/: __init__.py  config.py  main.py  version.py
minerva/cli/: app.py
prd/: kindle-scraper-prd.md
scripts/: authenticate_kindle.py  authenticate_kindle_timed.py  cleanup_test_data.py  generate_mvp_report.py  test_e2e_pipeline.py  test_full_book_capture.py  test_playwright_poc.py  test_session_persistence.py  validate_export.py
tests/: conftest.py
(+90 files in other folders)
